k8s/lab2/express-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb-express-deployment
  labels:
    app: mongodb-express
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb-express
  template:
    metadata:
      labels:
        app: mongodb-express
    spec:
      containers:
        - name: mongodb-express
          image: mongo-express
          ports:
            - containerPort: 8081
          command: ["/bin/sh", "-c"]
          args:
            - |
              export ME_CONFIG_MONGODB_URL="mongodb://$ME_CONFIG_MONGODB_ADMINUSERNAME:$ME_CONFIG_MONGODB_ADMINPASSWORD@$ME_CONFIG_MONGODB_SERVER:$ME_CONFIG_MONGODB_PORT/admin?authSource=admin"
              echo "Constructed ME_CONFIG_MONGODB_URL: $ME_CONFIG_MONGODB_URL"
              /docker-entrypoint.sh
