k8s/lab2/mongo-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mongodb-ing
spec:
  ingressClassName: nginx  
  rules:
    - host: k8s.alyesmaeil.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mongodb-express-service
                port:
                  number: 8081
